--- a/style.css
+++ b/style.css
@@ -17,16 +17,21 @@ body {
     margin-inline: auto; /* centers the container horizontally */
     display: flex;
     justify-content: space-evenly;
-    align-items: center;  /* centers the boxes vertically */
+    align-items: center;  
 }
 
 .box {
-    min-width: 10vw;
+    flex-basis: 150px;
     height: 20vh;
     background-color: black;
     color: white;
     font-size: 2rem;
     display: flex;
-    justify-content: center; /* centers content horizontally */
-    align-items: center; /* centers content vertically */
+    justify-content: center; 
+    align-items: center; 
+    border: 1px solid white;
+}
+
+.box:nth-child(3) {
+    flex: 2 2 150px; /* grows and shrinks twice as much as other child elements */
 }
